Fix wrapping of tags

--- a/DevBlogFrontend/wwwroot/css/app.css
+++ b/DevBlogFrontend/wwwroot/css/app.css
@@ -60,7 +60,7 @@
     padding: .3em .5em;
     margin-left: 1em;
     font-size: .7em;
-    white-space: nowrap;
+    display: inline-block;
 }
 
 a {
